--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "frontend",
-  "proxy": "http://127.0.0.1:5000",
-  "version": "0.1.0",
-  "private": true,
   "name": "youreventshop",
+  "proxy": "http://127.0.0.1:5000",
   "version": "1.0.0",
+  "private": true,
   "description": "MERN Ecommerce shopping app",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node backend/server",
     "server": "nodemon backend/server",
@@ -28,12 +27,6 @@
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -50,7 +43,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
