--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # misc
 .DS_Store
 #DOTENV FILE WILL CONTAIN SENSITIVE INFORMATION
-.env
+../.env
 .env.local
 .env.development.local
 .env.test.local
