--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+node_modules/
 /.pnp
 .pnp.js
 
@@ -14,7 +15,8 @@
 # misc
 .DS_Store
 #DOTENV FILE WILL CONTAIN SENSITIVE INFORMATION
-.env
+frontend/.env
+.
 .env.local
 .env.development.local
 .env.test.local
